--- a/js/index.html
+++ b/js/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/dark.css" type="text/css" id="style-link">
   </head>
   <body>
-    <div id="main"></div>
+    <div id="main" tabindex="0"></div>
   </body>
   <script>require('./window.js')</script>
 </html>
